Bug 153561 - Modern IDB: Fix many Index tests
Summary: Modern IDB: Fix many Index tests
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: Safari 9
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149117 153021
  Show dependency treegraph
 
Reported: 2016-01-27 14:47 PST by Brady Eidson
Modified: 2022-03-01 02:44 PST (History)
4 users (show)

See Also:


Attachments
Patch v1 (10.21 KB, patch)
2016-01-27 14:55 PST, Brady Eidson
no flags Details | Formatted Diff | Diff
Patch v1 (10.21 KB, patch)
2016-01-27 14:58 PST, Brady Eidson
achristensen: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2016-01-27 14:47:02 PST
Modern IDB: Fix many Index tests

1 - Getting an Index record could return null instead of undefined
2 - We almost always entered the exact same index record into the database twice
Comment 1 Brady Eidson 2016-01-27 14:55:35 PST
Created attachment 270049 [details]
Patch v1
Comment 2 Brady Eidson 2016-01-27 14:58:09 PST
Created attachment 270050 [details]
Patch v1
Comment 3 WebKit Commit Bot 2016-01-27 14:59:24 PST
Attachment 270050 [details] did not pass style-queue:


ERROR: Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:1242:  One line control clauses should not use braces.  [whitespace/braces] [4]
Total errors found: 1 in 5 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 4 Alex Christensen 2016-01-27 15:00:43 PST
Comment on attachment 270050 [details]
Patch v1

View in context: https://bugs.webkit.org/attachment.cgi?id=270050&action=review

r=me

> Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:1240
> +    if (cursor->didComplete()) {

{ not necessary.
Comment 5 Brady Eidson 2016-01-27 15:04:02 PST
http://trac.webkit.org/changeset/195697