Modern IDB: Fix many Index tests. https://bugs.webkit.org/show_bug.cgi?id=153561

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (Many failing tests now pass).

* Modules/indexeddb/server/MemoryIndex.cpp:
(WebCore::IDBServer::MemoryIndex::getResultForKeyRange):

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::uncheckedPutIndexKey):
(WebCore::IDBServer::SQLiteIDBBackingStore::uncheckedPutIndexRecord):
(WebCore::IDBServer::SQLiteIDBBackingStore::getIndexRecord):
(WebCore::IDBServer::SQLiteIDBBackingStore::iterateCursor):

* Modules/indexeddb/server/SQLiteIDBCursor.h:
(WebCore::IDBServer::SQLiteIDBCursor::didComplete):

LayoutTests:

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/171635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195697 268f45cc-cd09-0410-ab3c-d52691b4dbfc